<resources>
    <string name="app_name">FoodReview</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Foods Of the day</string>
    <string name="title_activity_gallery">galleryActivity</string>
    <string name="title_activity_gallary">GallaryActivity</string>
    <string name="places_btn">Places</string>
    <string name="myreview_btn">My Review</string>
    <string name="mylist_btn">My List</string>
    <string name="latest_btn">Latest</string>
    <string name="best_btn">Best</string>
    <string name="nearby_btn">Nearby</string>
    <string name="title_activity_item_show">ItemShowActivity</string>
    <string name="title_activity_horizontal_gallery">horizontalGallery</string>
</resources>
