<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_gallary"
    tools:context="com.silentme.simon.foodreview.GallaryActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/places_btn"
                android:background="?android:attr/selectableItemBackground"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:id="@+id/placesBtn" />
            <View
                android:id="@+id/v11"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true" />

            <View
                android:id="@+id/v1"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_centerHorizontal="true" />

            <View
                android:id="@+id/v12"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myreview_btn"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:layout_weight="1"
                android:id="@+id/MyReviewBtn" />

            <View
                android:id="@+id/v21"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true" />

            <View
                android:id="@+id/v2"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_centerHorizontal="true" />

            <View
                android:id="@+id/v22"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mylist_btn"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:layout_weight="1"
                android:id="@+id/MyListBtn" />
        </LinearLayout>

        <View
            android:id="@+id/v41"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_centerHorizontal="true" />
        <View
            android:id="@+id/v4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_centerHorizontal="true" />

        <!--<View
            android:id="@+id/v42"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_centerHorizontal="true" /> -->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:layout_weight="1"
                android:text="@string/latest_btn"

                android:id="@+id/latest_btn" />
            <!--<View
                android:id="@+id/v5"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true" />  -->

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_btn"
                android:background="?android:attr/selectableItemBackground"
                android:layout_weight="1"
                android:id="@+id/best_btn" />

            <!-- <View
                android:id="@+id/v6"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true" /> -->

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearby_btn"
                android:background="?android:attr/selectableItemBackground"
                android:layout_weight="1"
                android:id="@+id/nearby_btn" />

           <!-- <View
                android:id="@+id/v3"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true" />  -->

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:scaleType="fitStart"

                android:src="@drawable/search"
                android:id="@+id/imageButton3" />

        </LinearLayout>

        <View
            android:id="@+id/secondView"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridView
                android:numColumns="2"
                android:gravity="center"
                android:columnWidth="100dp"
                android:stretchMode="columnWidth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/grid"
                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
