<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_item_show"
        tools:context="com.silentme.simon.foodreview.ItemShowActivity">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/topLinearLayout"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/places_btn"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_weight="1"
                    android:layout_gravity="center"

                    android:id="@+id/placesBtn" />
                <View
                    android:id="@+id/v11"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true" />

                <View
                    android:id="@+id/v1"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_centerHorizontal="true" />

                <View
                    android:id="@+id/v12"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myreview_btn"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/MyReviewBtn" />

                <View
                    android:id="@+id/v21"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true" />

                <View
                    android:id="@+id/v2"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_centerHorizontal="true" />

                <View
                    android:id="@+id/v22"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mylist_btn"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/MyListBtn" />
            </LinearLayout>
            <View
                android:id="@+id/v41"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_centerHorizontal="true" />
            <View
                android:id="@+id/v4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_centerHorizontal="true" />

            <View
                android:id="@+id/v42"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="64dp"
                    android:layout_height="43dp"
                    android:layout_weight="1"
                    android:background="@drawable/b1"
                    android:text=""

                    android:id="@+id/latest_btn" />
                <View
                    android:id="@+id/v5"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Salmon Fish"
                    android:layout_weight="1"
                    android:id="@+id/textView5" />

                <View
                    android:id="@+id/v6"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true" />


                <ImageButton
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:scaleType="fitStart"

                    android:src="@drawable/search"
                    android:id="@+id/imageButton3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="10"
                    android:id="@+id/textView9" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:id="@+id/imageButton4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="20"
                    android:id="@+id/textView10" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:background="@drawable/f1"
                >

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Others Dishes"
                    android:id="@+id/textView6" />


                <HorizontalScrollView
                    android:id="@+id/horizontal_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    >

                    <LinearLayout
                        android:id="@+id/linear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                    </LinearLayout>

                </HorizontalScrollView>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RatingBar
                    android:layout_width="191dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="211dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Sea Palase Hotel"
                        android:id="@+id/textView7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="18/b,21, Ghulshan"
                        android:id="@+id/textView8" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="96dp">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="58dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            >

                            <ImageButton
                                android:layout_width="45dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0"
                                android:scaleType="fitStart"
                                android:background="@drawable/mark"
                                android:id="@+id/imageButton5" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="450 ft"
                                android:id="@+id/textView11" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="On the map"
                                android:id="@+id/textView12" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
